# aimusic

./: .dockerignore  .env.example  .flake8  .gitignore  CLAUDE.md  FEATURES.md  GEMINI.md  LICENSE  Makefile  README.md  docker-compose.yml  project_memory.md  pyproject.toml
.claude/: settings.local.json
.claude/agents/: code-reviewer.md  csp-auditor.md  docker-optimizer.md  i18n-checker.md  python-standards.md
.claude/hooks/: lint.sh  pre-commit.sh
.claude/memory/: MEMORY.md  feedback_i18n_apostrophes.md  feedback_no_inline_styles.md  feedback_python_standards.md  mydocs_feature.md  project-context.md  project_ai_layer.md  project_features.md  project_separator_api_only.md
.claude/rules/: coding-standards.md  docker-rules.md
.claude/skills/add-docstrings/: SKILL.md
.claude/skills/add-feature/: SKILL.md
.claude/skills/docker-build/: SKILL.md
acestep/: Dockerfile  app.py
backend/: Dockerfile  entrypoint.sh  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  admin.py  ai.py  auth.py  docs.py  download.py  media.py  melody.py  music.py  stem.py
backend/app/core/: __init__.py  auth.py  config.py  roles.py  security.py
backend/app/models/: __init__.py  user.py
backend/app/services/: __init__.py  constants.py  downloader_cli.py  extract_melody_cli.py  metadata_cleaner.py
backend/app/utils/: __init__.py  files.py  sse.py
backend/tests/: __init__.py  conftest.py  test_health.py  test_midi.py  test_presets.py
docker/: Dockerfile.base  Dockerfile.torch-base
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/assets/css/: main.css
frontend/src/components/: DeviceBanner.vue  NavBar.vue
frontend/src/composables/: usePlayer.ts
frontend/src/i18n/: index.ts
frontend/src/i18n/locales/: en.json  es.json  fr.json
frontend/src/router/: index.ts
frontend/src/services/: api.ts  types.ts
frontend/src/stores/: auth.ts
frontend/src/views/: AdminView.vue  DownloadQueueView.vue  DownloadView.vue  HomeView.vue  LoginView.vue  MediaFilesView.vue  MelodyView.vue  MusicView.vue  MyDocsView.vue  ProfileView.vue  StorageDashboardView.vue
frontend/src/views/stem/: AudioSepView.vue  DemucsView.vue  LalaiView.vue  StemLibraryView.vue  StemPlayerView.vue
separator/: .flake8  .gitignore  ARCHITECTURE.md  Dockerfile  Makefile  README.md  SECURITY.md  pyproject.toml  requirements.txt  start.sh
separator/scripts/: setup.sh
separator/src/: api.py  cli.py
separator/src/config/: __init__.py  settings.py
separator/src/core/: __init__.py  audiosep.py  lalai.py  separator.py
separator/src/lib/: __init__.py  audio.py  logging.py
transcribe/: Dockerfile  requirements.txt
transcribe/src/lib/: constants.py  transcribe_cli.py  transcribe_service.py
