[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

# Optional but recommended, use PEP 621 for project metadata:
[project]
name = "jaconv"
version = "0.0.0"
description = "Japanese character conversions"
authors = [{ name = "Rik", email = "rikardo.re@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"


[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
line_length = 120
multi_line_output = 3
force_grid_wrap = 0
include_trailing_comma = true
use_parentheses = true
order_by_type = true
combine_star = true
profile = "black"
