[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

# ── Project metadata ──────────────────────────────────────────────────────────
[project]
name = "music-source-separator"
version = "2.0.0"
description = "AI-powered music stem separation — Demucs · LALAL.AI · AudioSep"
requires-python = ">=3.13"
readme = "README.md"
license = { text = "MIT" }

# ── Black ─────────────────────────────────────────────────────────────────────
[tool.black]
line-length = 88
target-version = ["py313"]
skip-string-normalization = false

# ── isort ─────────────────────────────────────────────────────────────────────
[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["config", "core", "lib"]
src_paths = ["src"]

# ── flake8 (via flake8-pyproject plugin) ─────────────────────────────────────
# Install: pip install flake8-pyproject
# Without the plugin, use .flake8 instead (both contain the same settings).
[tool.flake8]
max-line-length = 88
extend-ignore = [
    "E203",   # whitespace before ':' — conflicts with Black slice formatting
    "W503",   # line break before binary operator — Black-preferred style
    "E501",   # line too long — Black handles this
]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "*.egg-info",
    "uploads",
    "outputs",
    "models",
]
per-file-ignores = [
    # __init__.py files are often empty or have star imports
    "**/__init__.py:F401",
]
